# tuide

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  install.sh  pyproject.toml
docs/: implementation-plan.md  progress-checklist.md
scripts/: install-remote.sh
src/tuide/: __init__.py  app.py  main.py  models.py  paths.py  platform.py
src/tuide/services/: config.py  git.py  lsp.py  python_navigation.py  python_semantic.py  search.py  workspace.py
src/tuide/widgets/: __init__.py  dialogs.py  diffview.py  editor.py  gitconflicts.py  githistory.py  menubar.py  panels.py  splitter.py  terminal.py
tests/: test_python_navigation.py
