[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuide"
version = "0.1.0"
description = "Linux-first terminal IDE scaffold built with Textual."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "platformdirs>=4.2.0",
  "rich>=13.7.0",
  "textual[syntax]>=0.58.0,<0.59.0",
  "tomli>=2.0.1; python_version < '3.11'",
  "tomli-w>=1.0.0",
]

[project.optional-dependencies]
linux = [
  "textual-terminal>=0.2.1",
]
dev = [
  "pytest>=8.1.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
tuide = "tuide.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
